# velera

./: .gitignore  Cargo.toml  LICENSE  README.md
audio/: Cargo.toml
audio/src/: AUDIO-CONCEPTS.md  apu.rs  lib.rs  main.rs  sound.rs
audio/src/sound/: amplify.rs  apu.rs  mixer_control.rs  noise.rs  pitch.rs  pitch_envelope.rs  pulse.rs  volume_envelope.rs  wave.rs
cpu/: Cargo.toml  README.md
cpu/src/: arm.rs  arm_decode.rs  arm_instructionset.rs  constants.rs  cpu.rs  enums.rs  gb.rs  instructionset.rs  lib.rs  macros.rs  micro_ops.rs  thumb.rs  thumb_decode.rs  utils.rs
cpu/src/arm/: decode.rs  tests.rs
cpu/src/cpu/: constants.rs  enums.rs
cpu/src/thumb/: tests.rs
cpu/tests/: tests.rs
cpu/tests/arm/: arm_decode.rs  mod.rs
cpu/tests/thumb/: mod.rs  thumb.rs
graphics/: Cargo.toml  README.md
graphics/src/: fb_graphics.rs  graphics.rs  lib.rs
graphics/src/backend/: linux_framebuffer.rs  mod.rs  sdl2.rs
graphics/src/frontend/: linux_framebuffer.rs  mod.rs  sdl2.rs
graphics/tests/: display.rs
memory/: Cargo.toml
memory/src/: lib.rs  memory.rs
src/: main.rs  memory.rs
