[package]
name = "velera-core"
version = "0.1.0"
authors = ["Lucas Micheloni <lucas.michelonidesouza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velera-graphics = { git = "https://github.com/velera-gba/velera-graphics" }
velera-audio = { git = "https://github.com/velera-gba/velera-audio" }
velera-memory = { git = "https://github.com/velera-gba/velera-memory" }
