[package]
name = "velera"
version = "0.0.1"
authors = ["Guilherme Torres <guilhermetorres97@gmail.com>", "AidoP <aidop@me.com>", "Kazuna Nakama <kazunanakama@gmail.com>", "Lucas Micheloni <lucas.michelonidesouza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["vulkan"]
vulkan = ["graphics/vulkan"]
fbdev = ["graphics/fbdev"]

[dependencies]
audio = { path = "audio" }
cpu = { path = "cpu" }
graphics = { path = "graphics" }
memory = { path = "memory" }

[workspace]
members = [
    "audio",
    "cpu",
    "graphics",
    "memory",
]
