[package]
name = "audio"
version = "0.0.1"
authors = ["AidoP <aidop@me.com>", "Kazuna Nakama <kazunanakama@gmail.com>", "Lucas Micheloni <lucas.michelonidesouza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
