[package]
name = "graphics"
version = "0.0.1"
authors = ["AidoP <aidop@me.com>"]
edition = "2018"

[features]
#default = ["vulkan"]
vulkan = ["vulkano"]
fbdev = []

[dependencies.sdl2]
version = "0.32.2"
features = ["bundled", "static-link"]   # Statically link and build SDL2 from source

[dependencies]
vulkano = { version = "0.16.0", optional = true }
memory = { path = "../memory" }
